--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,15 +13,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img class="logo-header" src="../assets/logos/headerblack.png"
-                        alt="Logo Organizzate"></a>
+                <a class="navbar-brand" href="../index.html"> <img class="logo-header"
+                        src="../assets/logos/headerblack.png" alt="Logo Organizzate"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,66 +54,64 @@
                 <div class="row text-center">
                     <div data-aos="fade-down">
                         <h1 class="subtitulo">Te ayudo a transformar tus espacios para simplificar tu vida.</h1>
-                        <h2 class="subapartado">¡Agendá una asesoría!</h2>
+                        <h2 class="apartado">¡Agendá una asesoría!</h2>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-7">
-                            <h2 class="subapartado">Contactame</h2>
-                            <h3 class="texto">Enviame un mensaje con tu consulta</h3>
-                            <form action="" class="formulario">
-                                <div>
-                                    <label for="nombre">Nombre y Apellido*</label>
-                                    <input required type="text" class="form-control">
-                                </div>
-                                <div>
-                                    <label for="email">Email*</label>
-                                    <input required type="email" class="form-control" name="email" id="email">
-                                </div>
-                                <div>
-                                    <label for="telefono">Teléfono Móvil</label>
-                                    <input type="tel" class="form-control" name="telefono" id="phone">
-                                </div>
-                                <div>
-                                    <label for="servicio">Servicio a consultar</label>
+                <div class="row">
+                    <div class="col-md-7 mt-4">
+                        <h2 class="subapartado">Contactame</h2>
+                        <h3 class="texto">Enviame un mensaje con tu consulta</h3>
+                        <form action="" class="formulario">
+                            <div>
+                                <label for="nombre">Nombre y Apellido*
+                                    <input required type="text" class="form-control" name="name" id="name"></label>
+                            </div>
+                            <div>
+                                <label for="email">Email*
+                                    <input required type="email" class="form-control" name="email" id="email"></label>
+                            </div>
+                            <div>
+                                <label for="telefono">Teléfono Móvil
+                                    <input type="tel" class="form-control" name="telefono" id="phone"></label>
+                            </div>
+                            <div>
+                                <label for="servicio">Servicio a consultar
                                     <select class="form-select" aria-label="Default select example">
                                         <option selected>Elegí el servicio</option>
                                         <option value="1">Organización a domicilio</option>
                                         <option value="2">Organización virtual</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <label for="mensaje">Mensaje</label>
-                                    <input type="text" class="form-control" name="mensaje" id="message">
-                                </div>
-                                <div>
-                                    <input type="submit" class="enviar" value="Enviar">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-5">
-                            <div class="card border-card">
-                                <div class="card-body">
-                                    <h5 class="card-title subapartado-contacto">Información de contacto</h5>
-                                    <p class="card-text texto-contacto"> <iconify-icon icon="bi:whatsapp"
-                                            class="icono-contacto"></iconify-icon>+54 9
-                                        11-0000-0000 </p>
-                                    <p class="card-text texto-contacto"> <iconify-icon
-                                            icon="material-symbols:mail-outline"
-                                            class="icono-contacto"></iconify-icon>organizzate@gmail.com
-                                    </p>
-                                </div>
+                                    </select></label>
+                            </div>
+                            <div>
+                                <label for="mensaje">Mensaje
+                                    <input type="text" class="form-control" name="mensaje" id="message"> </label>
+                            </div>
+                            <div>
+                                <input type="submit" class="enviar" value="Enviar">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="card mt-5 border-card">
+                            <div class="card-body">
+                                <h5 class="card-title subapartado-contacto">Información de contacto</h5>
+                                <p class="card-text texto-contacto"> <iconify-icon icon="bi:whatsapp"
+                                        class="icono-contacto"></iconify-icon>+54 9
+                                    11-0000-0000 </p>
+                                <p class="card-text texto-contacto"> <iconify-icon icon="material-symbols:mail-outline"
+                                        class="icono-contacto"></iconify-icon>organizzate@gmail.com
+                                </p>
                             </div>
                         </div>
                     </div>
+                </div>
         </section>
     </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="logo-footer">
+                    <div>
                         <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
                         <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
@@ -147,15 +145,18 @@
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
+                            <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
+                                class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                            <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
+                                class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                            <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
+                                class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
