--- a/pages/inspirate.html
+++ b/pages/inspirate.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organizzate | Inspirate</title>
-    <meta name="description" content="Descubrí más soluciones para establecer sistemas y simplificar rutinas e inspirate a organizar tus espacios con estos productos.">
+    <meta name="description"
+        content="Descubrí más soluciones para establecer sistemas y simplificar rutinas e inspirate a organizar tus espacios con estos productos.">
     <meta name="keywords"
         content="orden, organización, ordenar, organizar, asesoría de organización, organizadora profesional, ordeno tu casa, ordeno tu oficina, marie kondo, the home edit, consejos de organización, tips de orden, productos para ordenar">
     <link rel="shortcut icon" href="../assets/logos/headerblack.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img class="logo-header" src="../assets/logos/headerblack.png"
-                        alt="Logo Organizzate"></a>
+                <a class="navbar-brand" href="../index.html"> <img class="logo-header"
+                        src="../assets/logos/headerblack.png" alt="Logo Organizzate"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -71,10 +72,10 @@
                                     alt="Icono Lightbulb para consejos">
                                 <h3 class="card-title apartado"> Consejos para empezar a ordenar </h3>
                                 <p class="card-text texto">Empezá a ordenar tus espacios con estos simples consejos.</p>
-                                <button type="button" class="btn btn-dark agendar"><a
-                                        class="text-light text-decoration-none"
-                                        href="https://www.elmueble.com/decoracion/51-trucos-orden-infalibles_41749"
-                                        target="_blank">Ver</a></button>
+                                <a rel="noopener nofollow" role="button"
+                                    class="btn btn-dark text-light text-decoration-none agendar"
+                                    href="https://www.elmueble.com/decoracion/51-trucos-orden-infalibles_41749"
+                                    target="_blank">Ver</a>
                             </div>
                         </div>
                     </div>
@@ -88,10 +89,10 @@
                                 <h3 class="card-title apartado">Mis productos organizadores favoritos</h3>
                                 <p class="card-text texto">Agregale funcionalidad a tus espacios con estos productos.
                                 </p>
-                                <button type="button" class="btn btn-dark agendar"><a
-                                        class="text-light text-decoration-none"
-                                        href="https://www.colombraro.com.ar/categoria/organizacion/organizadores/organizadores-varios/"
-                                        target="_blank">Ver</a></button>
+                                <a rel="noopener nofollow" role="button"
+                                    class="btn btn-dark text-light text-decoration-none agendar"
+                                    href="https://www.colombraro.com.ar/categoria/organizacion/organizadores/organizadores-varios/"
+                                    target="_blank">Ver</a>
                             </div>
                         </div>
                     </div>
@@ -137,15 +138,18 @@
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
+                            <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
+                                class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                            <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
+                                class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                            <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
+                                class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
