--- a/pages/organizzate.html
+++ b/pages/organizzate.html
@@ -13,15 +13,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img class="logo-header" src="../assets/logos/headerblack.png"
-                        alt="Logo Organizzate"></a>
+                <a class="navbar-brand" href="../index.html"> <img class="logo-header"
+                        src="../assets/logos/headerblack.png" alt="Logo Organizzate"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,6 @@
                 <div class="row text-center">
                     <div data-aos="fade-down">
                         <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
-
                         <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
                             y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
                     </div>
@@ -124,7 +123,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="logo-footer">
+                    <div>
                         <img src="../assets/logos/footerwhite.png" class="logo-footer-img" alt="Logo Organizzate">
                         <p class="footer-disclaimer">Todos los derechos reservados 2024.</p>
                     </div>
@@ -158,15 +157,18 @@
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
+                            <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
+                                class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                            <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
+                                class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                            <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
+                                class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
