--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,15 +13,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/stylesheet.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img class="logo-header" src="../assets/logos/headerblack.png"
-                        alt="Logo Organizzate"></a>
+                <a class="navbar-brand" href="../index.html"> <img class="logo-header"
+                        src="../assets/logos/headerblack.png" alt="Logo Organizzate"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -75,9 +75,8 @@
                                     que
                                     se adaptan a tu
                                     estilo de vida.</p>
-                                <button type="button" class="btn btn-dark agendar"><a
-                                        class="text-light text-decoration-none"
-                                        href="./contacto.html">Agendar</a></button>
+                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar"
+                                    href="./contacto.html">Agendar</a>
                             </div>
                         </div>
                     </div>
@@ -91,9 +90,8 @@
                                     ayuda (y motivación), el servicio virtual te brinda las herramientas necesarias para
                                     que puedas hacerlo a
                                     tu ritmo.</p>
-                                <button type="button" class="btn btn-dark agendar"><a
-                                        class="text-light text-decoration-none"
-                                        href="./contacto.html">Agendar</a></button>
+                                <a role="button" class="btn btn-dark text-light text-decoration-none agendar"
+                                    href="./contacto.html">Agendar</a>
                             </div>
                         </div>
                     </div>
@@ -139,15 +137,18 @@
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
+                            <a rel="noopener nofollow" href="https://www.whatsapp.com/" target="_blank"
+                                class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
+                            <a rel="noopener nofollow" href="https://www.instagram.com/" target="_blank"
+                                class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
+                            <a rel="noopener nofollow" href="https://www.facebook.com/" target="_blank"
+                                class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
